kgl first commit

--- a/package.json
+++ b/package.json
@@ -1,23 +1,16 @@
 {
   "name": "final-project-ciu",
   "version": "1.0.0",
-  "description": "",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "nodemon app.js"
   },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/jose987654/Project.git"
-  },
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/jose987654/Project/issues"
-  },
-  "homepage": "https://github.com/jose987654/Project#readme",
+ 
+ 
   "dependencies": {
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
@@ -27,5 +20,7 @@
     "passport": "^0.6.0",
     "passport-local-mongoose": "^7.1.2",
     "pug": "^3.0.2"
-  }
+  },
+  "devDependencies": {},
+  "description": ""
 }
