--- a/package.json
+++ b/package.json
@@ -2,9 +2,13 @@
   "name": "final-project-ciu",
   "version": "1.0.0",
   "main": "index.js",
+  "directories": {
+    "tests": "test"
+  },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon app.js"
+    "test": "jest",
+    "start": "nodemon app.js",
+    "start:prod": "node app.js"
   },
   "keywords": [],
   "author": "",
@@ -19,7 +23,11 @@
     "pug": "^3.0.2"
   },
   "devDependencies": {
-    "nodemon": "^2.0.19"
+    "eslint": "^8.23.1",
+    "eslint-config-airbnb-base": "^15.0.0",
+    "eslint-plugin-import": "^2.26.0",
+    "jest": "^29.0.3",
+     "nodemon": "^2.0.19"
   },
   "description": ""
 }
