--- a/package.json
+++ b/package.json
@@ -6,28 +6,29 @@
     "tests": "test"
   },
   "scripts": {
-    "test": "jest",
-    "start": "nodemon app.js",
+    "test": "mocha",
+    "dev": "nodemon app.js",
     "start:prod": "node app.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "dotenv": "^16.0.1",
+    "dotenv": "^16.0.2",
     "express": "^4.18.1",
     "express-session": "^1.17.3",
-    "mongoose": "^6.4.1",
+    "mongoose": "^6.6.0",
     "passport": "^0.6.0",
     "passport-local-mongoose": "^7.1.2",
     "pug": "^3.0.2"
   },
   "devDependencies": {
+    "chai": "^4.3.6",
     "eslint": "^8.23.1",
     "eslint-config-airbnb-base": "^15.0.0",
     "eslint-plugin-import": "^2.26.0",
-    "jest": "^29.0.3",
-     "nodemon": "^2.0.19"
+    "mocha": "^10.0.0",
+    "nodemon": "^2.0.19"
   },
   "description": ""
 }
