--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "express": "^4.18.1",
     "express-session": "^1.17.3",
     "mongoose": "^6.6.0",
+    "morgan": "^1.10.0",
     "passport": "^0.6.0",
     "passport-local-mongoose": "^7.1.2",
     "pug": "^3.0.2",
