--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
   "name": "final-project-ciu",
   "version": "1.0.0",
-  "main": "index.js",
+  "main": "app.js",
   "scripts": {
     "dev": "nodemon app.js",
-    "start": "node app",
+    "start": "node app.js",
     "test": "mocha"
   },
   "keywords": [],
