--- a/package.json
+++ b/package.json
@@ -30,5 +30,8 @@
     "mocha": "^10.0.0",
     "nodemon": "^2.0.19"
   },
-  "description": ""
+  "description": "",
+  "engines": {
+    "node": "16.x"
+  }
 }
