--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "scripts": {
     "dev": "nodemon app.js",
     "start": "node app.js",
-    "test": "mocha"
+    "test": "mocha", 
+    "build": " npm start"
   },
   "keywords": [],
   "author": "",
